@@ -6,11 +6,13 @@ import io.micronaut.test.annotation.MockBean;
 import java.lang.reflect.AccessibleObject;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
+import java.util.AbstractMap;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 class MockInjector {
@@ -29,9 +31,9 @@ class MockInjector {
     public static Consumer<Object> inject(final BeanDefinition<?> specDefinition) {
         return specInstance -> {
             final Class<?> specInstanceClass = specInstance.getClass();
-            final var mockBeanAnnotatedMethods = getMockBeanAnnotated(specInstanceClass.getDeclaredMethods());
-            final var mockBeanAnnotatedFields = getMockBeanAnnotated(specInstanceClass.getDeclaredFields());
-            for (final var injectedField : specDefinition.getInjectedFields()) {
+            final List<Method> mockBeanAnnotatedMethods = getMockBeanAnnotated(specInstanceClass.getDeclaredMethods());
+            final List<Field> mockBeanAnnotatedFields = getMockBeanAnnotated(specInstanceClass.getDeclaredFields());
+            for (final io.micronaut.inject.FieldInjectionPoint<?, ?> injectedField : specDefinition.getInjectedFields()) {
                 Stream.concat(mockBeanAnnotatedMethods.stream(), mockBeanAnnotatedFields.stream())
                         .filter(e -> isSameType(e, injectedField.getType()))
                         .map(e -> getMock(e, specInstance))
@@ -44,26 +46,26 @@ class MockInjector {
     private static <T extends AccessibleObject> List<T> getMockBeanAnnotated(final T... accessibleObject) {
         return Arrays.stream(accessibleObject)
                 .filter(e -> e.isAnnotationPresent(MockBean.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static boolean isSameType(final AccessibleObject accessibleObject, final Class<?> targetType) {
-        if (accessibleObject instanceof Method m) {
-            return m.getReturnType().equals(targetType);
+        if (accessibleObject instanceof Method) {
+            return ((Method) accessibleObject).getReturnType().equals(targetType);
         }
-        if (accessibleObject instanceof Field f) {
-            return f.getType().equals(targetType);
+        if (accessibleObject instanceof Field) {
+            return ((Field) accessibleObject).getType().equals(targetType);
         }
         return false;
     }
 
     private static Map.Entry<AccessibleObject, Callable<?>> getMock(final AccessibleObject accessibleObject,
                                                                     final Object specInstance) {
-        if (accessibleObject instanceof Field f) {
-            return Map.entry(accessibleObject, () -> f.get(specInstance));
+        if (accessibleObject instanceof Field) {
+            return new AbstractMap.SimpleEntry<>(accessibleObject, () -> ((Field) accessibleObject).get(specInstance));
         }
-        if (accessibleObject instanceof Method m) {
-            return Map.entry(accessibleObject, () -> m.invoke(specInstance));
+        if (accessibleObject instanceof Method) {
+            return new AbstractMap.SimpleEntry<>(accessibleObject, () -> ((Method) accessibleObject).invoke(specInstance));
         }
         throw new RuntimeException();
     }
